CSS: Fix button alignment in FF, Chrome and IE

--- a/public/css/icinga/menu.less
+++ b/public/css/icinga/menu.less
@@ -29,7 +29,8 @@
 
 #collapse-sidebar {
   position: absolute;
-  bottom: 0; left: 0; right: 0;
+  bottom: 0; left: 0;
+  width: 100%;
   color: @gray-light;
   border: none;
   text-align: right;
